@@ -4,6 +4,17 @@
     <!-- jEdit buffer-local properties: -->
     <!-- :indentSize=2:noTabs=true: -->
     <!-- :xml.root=users-guide.xml: -->
+    <para>The easiest way to install a new mode locally is to use the Editing 
+    dialog found under Utilities - Global Options. At the bottom of this dialog
+    is an "Add Mode" button. Clicking this button shows a dialog to add a mode
+    to jEdit. Simply fill in the blanks and the mode file will be put in the
+    proper place and the catalog file will be updated appropriately. Modes added
+    this way can be removed by selecting the mode in the Editing dialog, then
+    clicking the "Delete Mode" button. This button will only appear for modes
+    that exist in the user settings directory. Core modes, that is, those modes
+    distributed with jEdit cannot be deleted this way. The details of adding a
+    mode by hand are below.
+    </para>
     <para>jEdit looks for edit modes in two locations; the
     <filename>modes</filename> subdirectory of the jEdit settings directory, and
     the <filename>modes</filename> subdirectory of the jEdit install directory.
@@ -52,7 +63,12 @@
         <listitem>
             <para><literal>FILE_NAME_GLOB</literal> - files whose names match
             this glob pattern will be opened in this edit mode.
-            This can also specify full paths, if the glob pattern contains a path separator character. <literal>FILE_NAME_GLOB</literal> can be specified in the <literal>modes/catalog</literal> file, or the mode file itself. See the <literal>FILE_NAME_GLOB</literal> for <literal>apacheconf.xml</literal> in <literal>modes/catalog</literal> for an example of full path filename globbing.
+            This can also specify full paths, if the glob pattern contains a 
+            path separator character. <literal>FILE_NAME_GLOB</literal> can be 
+            specified in the <literal>modes/catalog</literal> file, or the mode 
+            file itself. See the <literal>FILE_NAME_GLOB</literal> for 
+            <literal>apacheconf.xml</literal> in <literal>modes/catalog</literal> 
+            for an example of full path filename globbing.
             </para>
         </listitem>
 
