@@ -22,6 +22,7 @@
 package org.gjt.sp.jedit.syntax;
 
 //{{{ Imports
+import org.gjt.sp.jedit.jEdit;
 import org.gjt.sp.jedit.Mode;
 import org.gjt.sp.util.IOUtilities;
 import org.gjt.sp.util.Log;
@@ -31,13 +32,24 @@ import org.xml.sax.XMLReader;
 import org.xml.sax.helpers.XMLReaderFactory;
 
 import java.io.BufferedInputStream;
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
+import java.io.FileReader;
+import java.io.FileWriter;
 import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.FileSystems;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.LinkedHashMap;
+import java.util.regex.*;
+import javax.swing.JOptionPane;
 //}}}
 
 /**
@@ -57,6 +69,72 @@ public class ModeProvider
 	public void removeAll()
 	{
 		modes.clear();
+	} //}}}
+
+	//{{{ removeMode() method
+	/**
+ 	 * Will only remove user modes.	
+ 	 */
+	public void removeMode(String name)
+	{
+		Mode mode = modes.get(name);
+		if (mode.isUserMode())
+		{
+			modes.remove(name);
+			// delete mode file from disk and remove the entry from the catalog file.
+			// Actually, just rename the mode file by adding "_unused" to the end of the file name
+			// and comment out the line in the catalog file. This way it is possible to undo
+			// these changes manually without too much work.
+			String modeFilename = (String)mode.getProperty("file");
+			File modeFile = new File(modeFilename);
+			if (modeFile.exists()) 
+			{
+				try 
+				{
+					Path path = FileSystems.getDefault().getPath(modeFilename);
+					Files.move(path, path.resolveSibling(modeFilename + "_unused"), StandardCopyOption.REPLACE_EXISTING);
+				}
+				catch(Exception e) {
+					JOptionPane.showMessageDialog(jEdit.getActiveView(), 
+						jEdit.getProperty("options.editing.deleteMode.dialog.message1") + " " + modeFilename + 
+						"\n" + jEdit.getProperty("options.editing.deleteMode.dialog.message2") + " " + mode.getName());
+					return;
+				}
+				
+				// delete entry from mode catalog, catalog is in the same directory as the mode file
+				File catalogFile = new File(modeFile.getParent(),"catalog");
+				if (catalogFile.exists())
+				{
+					try 
+					{
+						// read in the catalog file
+						BufferedReader br = new BufferedReader(new FileReader(catalogFile));
+						String line = null;
+						StringBuilder contents = new StringBuilder();
+						while((line = br.readLine()) != null) {
+							contents.append(line).append('\n');
+						}
+						br.close();
+						
+						// remove the catalog entry for this mode
+						Pattern p = Pattern.compile("(?m)(^\\s*[<]MODE.*?NAME=\"" + name + "\".*?[>])");
+						Matcher m = p.matcher(contents);
+						String newContents = m.replaceFirst("<!--$1-->");
+						
+						// rewrite the catalog file
+						BufferedWriter bw = new BufferedWriter(new FileWriter(catalogFile));
+						bw.write(newContents, 0, newContents.length());
+						bw.flush();
+						bw.close();
+					}
+					catch(Exception e) 
+					{
+						// ignored 
+					}
+				}
+			}
+			
+		}
 	} //}}}
 
 	//{{{ getMode() method
@@ -180,6 +258,83 @@ public class ModeProvider
 		modes.remove(name);
 
 		modes.put(name, mode);
+	} //}}}
+
+	//{{{ addUserMode() method
+	/**
+	 * Do not call this method. It is only public so that classes
+	 * in the org.gjt.sp.jedit.syntax package can access it.
+	 * @since jEdit 4.3pre10
+	 * @see org.gjt.sp.jedit.jEdit#reloadModes reloadModes
+	 * @param mode The edit mode
+	 */
+	public void addUserMode(Mode mode)
+	{
+		mode.setUserMode(true);
+		String name = mode.getName();
+		String modeFile = (String)mode.getProperty("file");
+		String filenameGlob = (String)mode.getProperty("filenameGlob");
+		String firstLineGlob = (String)mode.getProperty("firstlineGlob");
+		
+		// copy mode file to user mode directory
+		Path target = null;
+		try 
+		{
+			File file = new File(modeFile);
+			Path source = FileSystems.getDefault().getPath(modeFile);
+			target = FileSystems.getDefault().getPath(jEdit.getSettingsDirectory(), "modes", file.getName());
+			target = Files.copy(source, target, StandardCopyOption.REPLACE_EXISTING);
+		}
+		catch(Exception e) {
+			JOptionPane.showMessageDialog(jEdit.getActiveView(), jEdit.getProperty("options.editing.addMode.dialog.warning.message1") + " " + modeFile + "\n--> " + target);
+			return;
+		}
+		
+		// add entry to mode catalog, catalog is in the same directory as the mode file
+		File catalogFile = new File(target.toFile().getParent(),"catalog");
+		if (catalogFile.exists())
+		{
+			try 
+			{
+				// read in the catalog file
+				BufferedReader br = new BufferedReader(new FileReader(catalogFile));
+				String line = null;
+				StringBuilder contents = new StringBuilder();
+				while((line = br.readLine()) != null) {
+					contents.append(line).append('\n');
+				}
+				br.close();
+				
+				// remove any existing catalog entry for this mode
+				Pattern p = Pattern.compile("(?m)(^\\s*[<]MODE.*?NAME=\"" + name + "\".*?[>])");
+				Matcher m = p.matcher(contents);
+				String newContents = m.replaceFirst("<!--$1-->");
+				
+				// insert the catalog entry for this mode
+				p = Pattern.compile("(?m)(</MODES>)");
+				m = p.matcher(contents);
+				StringBuilder modeLine = new StringBuilder("\t<MODE NAME=\"");
+				modeLine.append(name).append("\" FILE=\"").append(target.toFile().getName()).append("\"");
+				modeLine.append(filenameGlob == null || filenameGlob.isEmpty() ? "" : " FILE_NAME_GLOB=\"" + filenameGlob + "\"");
+				modeLine.append(firstLineGlob == null || firstLineGlob.isEmpty() ? "" : " FIRST_LINE_GLOB=\"" + firstLineGlob + "\"");
+				modeLine.append("/>");
+				newContents = m.replaceFirst(modeLine + "\n$1" );
+				
+				// rewrite the catalog file
+				BufferedWriter bw = new BufferedWriter(new FileWriter(catalogFile));
+				bw.write(newContents, 0, newContents.length());
+				bw.flush();
+				bw.close();
+			}
+			catch(Exception e) 
+			{
+				// ignored 
+			}
+		}
+		
+		
+		addMode(mode);
+		loadMode(mode);
 	} //}}}
 
 	//{{{ loadMode() method
