@@ -1359,18 +1359,22 @@ options.editing.elasticTabstops=Indent using elastic tabstops
 options.editing.elasticTabstops.tooltip=Columns in lines above and below a "cell" are kept aligned on tab stops that can grow or shrink depending on the width of the cell.
 options.editing.deepIndent=Deep indent
 options.editing.autoIndent=Automatic indentation:
-options.editing.largefilemode.title=Large file mode
-options.editing.largefilemode=What should I do about very big files:
-options.editing.largefilemode.option.ask=<html><b>Ask</b> what to do when opening a large file</html>
-options.editing.largefilemode.option.full=<html><b>Keep Full syntax</b> : jEdit's syntax highlight will work as usual, jEdit \
-                                               	may become<br/><b>very slow, this is not recommended</b></html>
-options.editing.largefilemode.option.limited=<html><b>Context insensitive syntax highlight</b>: In this case jEdit will \
-		do fast highlighting, but the<br/>result may not be perfect. The \
-		buffer is highlighted line by line without taking care of the<br/>context \
-		of the previous line. It is possible that the syntax is not accurate \
-		if you have<br/>tokens on multiple lines (multiline comments, xml tags ...) \
-		Soft wrap is also deactivated<br/><b>(best choice)</b></html>
-options.editing.largefilemode.option.nohighlight=No syntax highlight, no soft wrap
+options.editing.deleteMode=Delete this mode
+options.editing.addMode=Add Mode
+options.editing.addMode.dialog.title=Add Mode
+options.editing.addMode.dialog.browse=Browse
+options.editing.addMode.dialog.modeName=Mode Name:
+options.editing.addMode.dialog.modeFile=Select Mode File:
+options.editing.addMode.dialog.filenameGlob=File Name Glob:
+options.editing.addMode.dialog.firstLineGlob=First Line Glob:
+options.editing.addMode.dialog.warning.title=Confirm Mode Replace:
+options.editing.addMode.dialog.warning.message=This mode already exists. Do you want to replace it?
+options.editing.addMode.dialog.warning.message1=Unable to copy mode file
+options.editing.deleteMode.dialog.title=Confirm Mode Delete
+options.editing.deleteMode.dialog.message=Are you sure you want to delete this mode? It cannot be undone.
+options.editing.deleteMode.dialog.message1=Unable to delete mode file
+options.editing.deleteMode.dialog.message2=for mode
+
 #}}}
 
 #{{{ Encodings pane
@@ -1412,6 +1416,18 @@ options.gutter.foldStyleNames.Circle=Circle
 
 #{{{ Large files pane
 options.large-files.label=Large files
+options.editing.largefilemode.title=Large file mode
+options.editing.largefilemode=What should I do about very big files:
+options.editing.largefilemode.option.ask=<html><b>Ask</b> what to do when opening a large file</html>
+options.editing.largefilemode.option.full=<html><b>Keep Full syntax</b> : jEdit's syntax highlight will work as usual, jEdit \
+                                               	may become<br/><b>very slow, this is not recommended</b></html>
+options.editing.largefilemode.option.limited=<html><b>Context insensitive syntax highlight</b>: In this case jEdit will \
+		do fast highlighting, but the<br/>result may not be perfect. The \
+		buffer is highlighted line by line without taking care of the<br/>context \
+		of the previous line. It is possible that the syntax is not accurate \
+		if you have<br/>tokens on multiple lines (multiline comments, xml tags ...) \
+		Soft wrap is also deactivated<br/><b>(best choice)</b></html>
+options.editing.largefilemode.option.nohighlight=No syntax highlight, no soft wrap
 #}}}
 
 
